[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "rust-patterns"]
description = "A garbage collection library with zero `unsafe` code and zero dependencies."
documentation = "https://docs.rs/safe-gc"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "safe-gc"
readme = "README.md"
repository = "https://github.com/fitzgen/safe-gc"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  './fuzz',
  './crates/mutator',
]
